@@ -6,6 +6,8 @@ missing_slug        "Slug requires a value for this story type because it is use
 missing_category    "Site / Category requires a value."
 missing_cover_date  "Cover Date requires a value."
 
+no_categories_for_chooser "No Sites are defined.  You must add a Site before you can create stories, media and templates."
+
 <Module "Krang::CGI::Story">
   duplicate_url "Duplicate URL detected.  Story ID $story_id has the URL $url which is the same as your choices generate.  Please change your settings for $which to generate a new URL."
 
