@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added a message to remind users that they must create a site before
+adding stories, media or templates. [Sam]
+
+=item *
+
 Added initial support for FreeBSD!  Currently it only supports FreeBSD
 5.2.1 with GNU make (gmake) installed, as that was the only available
 testable environment.  Would be nice if someone with more experience
@@ -15,7 +20,6 @@ in BSD Makefiles could get Krang's Makefiles to work with BSD make.
 There should be nothing keeping Krang from working with earlier
 versions of FreeBSD, but that will require someone to pick up the BSD
 ball and run with it.  [Peter]
-
 
 =item *
 
